--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,27 @@
 version: 2.1
 
-orbs:
-  maven: circleci/maven@0.0.12
+jobs:
+  build_backend:
+    docker:
+      - image: circleci/openjdk:11-jdk
 
-workflows:
-  maven_test:
-    jobs:
-      - maven/test # checkout, build, test, and upload test results
+    working_directory: ~/repo
+
+    environment:
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - checkout
+      - run:
+          name: Install Dependencies
+          command: mvn -DskipTests clean install dependency:resolve-plugins dependency:go-offline
+      - run:
+          name: Run tests
+          command: mvn verify
+      - persist_to_workspace:
+          root: tanaguru-rest/target/
+          paths:
+            - tanaguru-rest.zip
