--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,13 @@ jobs:
           root: tanaguru-rest/target/
           paths:
             - tanaguru-rest.zip
+  workflows:
+    version: 2.1
+    build_and_deploy:
+      jobs:
+        - build_backend:
+            filters:
+              branches:
+                only:
+                  - develop
+                  - master
