--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>com.tanaguru</groupId>
 	<artifactId>tanaguru2020</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
     <properties>
         <java.version>1.8</java.version>
