update session duration key

--- a/tanaguru-resources/src/main/resources/rest.properties
+++ b/tanaguru-resources/src/main/resources/rest.properties
@@ -2,6 +2,6 @@ cors.origins=*
 webapp.url=http://localhost:8080/#/
 
 #Duration in second
-session.timeout=3600
+session.duration=3600
 
 jwt.secret=changeMe
