--- a/tanaguru-engine/tanaguru-api/pom.xml
+++ b/tanaguru-engine/tanaguru-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tanaguru-engine</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -47,6 +47,16 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.4.10.Final</version>
@@ -72,7 +82,7 @@
         <dependency>
             <groupId>com.tanaguru</groupId>
             <artifactId>tanaguru-helper</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
