--- a/tanaguru-rest/pom.xml
+++ b/tanaguru-rest/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tanaguru2020</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
@@ -48,13 +48,23 @@
         <dependency>
             <groupId>com.tanaguru</groupId>
             <artifactId>tanaguru-api</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>com.tanaguru</groupId>
             <artifactId>tanaguru-audit-runner</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
         </dependency>
 
         <dependency>
@@ -124,7 +134,7 @@
                 <executions>
                     <execution>
                         <configuration>
-                            <finalName>tanaguru-rest-${project.version}</finalName>
+                            <finalName>tanaguru2020-rest-${project.version}</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                         </configuration>
                         <phase>package</phase>
