first commit on this branch create webdriver for chrome

--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -4,8 +4,11 @@ auditrunner.proxy.password=
 auditrunner.proxy.port=
 auditrunner.proxy.host=
 
-auditrunner.geckodriver =  /opt/geckodriver
-auditrunner.firefox-binary =  /opt/firefox/firefox
+auditrunner.active=firefox,chrome
+auditrunner.geckodriver =  C:/Users/lpedrau/Documents/Geckodriver/geckodriver.exe
+auditrunner.firefox-binary =  C:/Program Files/Mozilla Firefox/firefox.exe
+auditrunner.chrome-binary = C:/Program Files (x86)/Google/Chrome/Application/chrome.exe
+auditrunner.chromedriver = C:/Users/lpedrau/Documents/Chromedriver/chromedriver.exe
 auditrunner.implicitlyWait = 10
 auditrunner.pageLoadTimeout = 10
 auditrunner.scriptTimeout = 10
