--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -6,7 +6,7 @@ server.port = 9002
 # DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/tanaguru
 spring.datasource.username=tanaguru
-spring.datasource.password=tanaguru
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.show_sql=false
