chrome support - chrome selected by default

--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -4,7 +4,7 @@ auditrunner.proxy.password=
 auditrunner.proxy.port=
 auditrunner.proxy.host=
 
-auditrunner.active=firefox,chrome
+auditrunner.active=chrome
 auditrunner.geckodriver =  C:/Users/lpedrau/Documents/Geckodriver/geckodriver.exe
 auditrunner.firefox-binary =  C:/Program Files/Mozilla Firefox/firefox.exe
 auditrunner.chrome-binary = C:/Program Files (x86)/Google/Chrome/Application/chrome.exe
