--- a/tanaguru-engine/tanaguru-api/pom.xml
+++ b/tanaguru-engine/tanaguru-api/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${springboot-version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
