indentation and key in rest conf (send email to admin or not)

--- a/tanaguru-resources/src/main/resources/rest.properties
+++ b/tanaguru-resources/src/main/resources/rest.properties
@@ -5,3 +5,6 @@ webapp.url=http://localhost:8080/#/
 session.duration=3600
 
 jwt.secret=changeMe
+
+#Allow send an email to admin when user is blocked
+admin.mail.whenblocked = true
