add endpoint browsers available

--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -4,6 +4,7 @@ auditrunner.proxy.password=
 auditrunner.proxy.port=
 auditrunner.proxy.host=
 
+auditrunner.active = firefox,chrome
 auditrunner.geckodriver =  /opt/geckodriver
 auditrunner.firefox-binary =  /opt/firefox/firefox
 auditrunner.implicitlyWait = 10
