fix conf file and queries findAllByProject

--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -4,8 +4,8 @@ auditrunner.proxy.password=
 auditrunner.proxy.port=
 auditrunner.proxy.host=
 
-auditrunner.geckodriver =  C:/Users/lpedrau/Documents/Geckodriver/geckodriver.exe
-auditrunner.firefox-binary =  C:/Program Files/Mozilla Firefox/firefox.exe
+auditrunner.geckodriver =  /opt/geckodriver
+auditrunner.firefox-binary =  /opt/firefox/firefox
 auditrunner.implicitlyWait = 10
 auditrunner.pageLoadTimeout = 10
 auditrunner.scriptTimeout = 10
