endpoint health check

--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -42,3 +42,6 @@ crypto.key=change_Me_Please
 # Other
 #Password token validity (second)
 password.tokenValidity=86400
+
+# HealthCheck endpoint
+management.endpoint.health.show-details=always
