--- a/tanaguru-rest/pom.xml
+++ b/tanaguru-rest/pom.xml
@@ -29,7 +29,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>${springboot-version}</version>
         </dependency>
-
+		
+		<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-actuator</artifactId>
+			</dependency>
+			
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
