Fix staarting without mail server + some refactoring

--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -6,7 +6,7 @@ server.port = 9002
 # DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/tanaguru
 spring.datasource.username=tanaguru
-spring.datasource.password=password
+spring.datasource.password=tanaguru
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.show_sql=false
@@ -21,13 +21,13 @@ spring.liquibase.change-log=classpath:/db/master.xml
 
 # MAIL
 mail.from=support@tanaguru.com
-spring.mail.host=localhost
 
-spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=localhost
+#spring.mail.port=587
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
 
 # LOGGING
 logging.level.root=error
