--- a/tanaguru-resources/src/main/resources/rest.properties
+++ b/tanaguru-resources/src/main/resources/rest.properties
@@ -5,3 +5,6 @@ webapp.url=http://localhost:8080/#/
 session.duration=3600
 
 jwt.secret=changeMe
+
+# HealthCheck endpoint
+management.endpoint.health.show-details=always
