fix webdriver and add schema choice for database

--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -16,6 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=false
+spring.jpa.properties.hibernate.default_schema=
 
 spring.liquibase.change-log=classpath:/db/master.xml
 
