chrome profile path

--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -15,6 +15,7 @@ auditrunner.scriptTimeout = 10
 auditrunner.crawler.outputDir = /tmp/tanaguru/crawler
 
 auditrunner.firefox.profile=
+auditrunner.chrome.profile=
 
 # sync : For CLI
 # async : For standalone server, this permit to queue audit requests
