--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -23,12 +23,12 @@ spring.liquibase.change-log=classpath:/db/master.xml
 # MAIL
 mail.from=support@tanaguru.com
 
-#spring.mail.host=localhost
-#spring.mail.port=587
-#spring.mail.username=
-#spring.mail.password=
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=localhost
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # LOGGING
 logging.level.root=error
