try fix send email by changing mail.from key

--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -21,7 +21,7 @@ spring.jpa.properties.hibernate.default_schema=
 spring.liquibase.change-log=classpath:/db/master.xml
 
 # MAIL
-mail.from=support@tanaguru.com
+spring.mail.properties.mail.smtp.from=support@tanaguru.com
 
 spring.mail.host=localhost
 spring.mail.port=587
