--- a/tanaguru-engine/tanaguru-api/pom.xml
+++ b/tanaguru-engine/tanaguru-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tanaguru-engine</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>com.tanaguru</groupId>
             <artifactId>tanaguru-helper</artifactId>
-            <version>1.0.2</version>
+            <version>1.0.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
