start create new module in tanaguru 2020 engine and custom cli

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
         <module>tanaguru-cli</module>
         <module>tanaguru-rest</module>
 		<module>tanaguru-resources</module>
-    </modules>
+		<module>tanaguru-cli-docker</module>
+	</modules>
 
 	<groupId>com.tanaguru</groupId>
 	<artifactId>tanaguru2020</artifactId>
