--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,11 @@
 	<version>1.0.3-SNAPSHOT</version>
 
     <properties>
-		<springboot-version>2.4.3</springboot-version>
-		<spring-version>5.3.4</spring-version>
+		<springboot-version>2.2.6.RELEASE</springboot-version>
+		<spring-version>5.2.9.RELEASE</spring-version>
 		<kafka-version>2.4.0</kafka-version>
 		<maven-compiler-version>3.8.1</maven-compiler-version>
-		<jackson-version>2.12.2</jackson-version>
+		<jackson-version>2.10.5</jackson-version>
     </properties>
 
 	<dependencyManagement>
