add function run audit with docker container in controller

--- a/tanaguru-engine/tanaguru-audit-runner/pom.xml
+++ b/tanaguru-engine/tanaguru-audit-runner/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>powermock-api-mockito2</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+			<groupId>com.github.docker-java</groupId>
+			<artifactId>docker-java</artifactId>
+			<version>3.2.7</version>
+		</dependency>
     </dependencies>
 
 </project>
