--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -34,3 +34,8 @@ auditrunner.scheduler.enabled=true
 auditrunner.kafka.bootstrap-servers = localhost:9092
 auditrunner.kafka.group = AUDIT_RUNNER
 auditrunner.kafka.topic.auditrequest = AUDIT_REQUEST
+
+# Enable the launch of the audits in docker containers
+auditrunner.audit-docker.enabled=true
+# Name of the docker image to use
+auditrunner.audit-docker.container=clidocker
