fix path google chrome conf

--- a/tanaguru-resources/src/main/resources/audit-docker.properties
+++ b/tanaguru-resources/src/main/resources/audit-docker.properties
@@ -9,7 +9,7 @@ auditrunner.proxy.host=
 auditrunner.active=firefox,chrome
 auditrunner.geckodriver =  /opt/geckodriver
 auditrunner.firefox-binary =  /opt/firefox/firefox
-auditrunner.chrome-binary = /opt/chrome/chrome
+auditrunner.chrome-binary = /opt/google/chrome/chrome
 auditrunner.chromedriver = /opt/chromedriver/chromedriver
 auditrunner.implicitlyWait = 10
 auditrunner.pageLoadTimeout = 10
