changes for the PR : keys in conf files, constants, changelog

--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -38,4 +38,6 @@ auditrunner.kafka.topic.auditrequest = AUDIT_REQUEST
 # Enable the launch of the audits in docker containers
 auditrunner.audit-docker.enabled=true
 # Name of the docker image to use
-auditrunner.audit-docker.container=clidocker
+auditrunner.audit-docker.image=clidocker
+# Network mode - host config of the container
+auditrunner.audit-docker.network.mode=host
