add log during audit error. Try to speed up result page display. Add configuration key to avoid robots.txt

--- a/tanaguru-resources/src/main/resources/audit-runner.properties
+++ b/tanaguru-resources/src/main/resources/audit-runner.properties
@@ -4,6 +4,8 @@ auditrunner.proxy.password=
 auditrunner.proxy.port=
 auditrunner.proxy.host=
 
+auditrunner.crawler.follow-robots=true
+
 auditrunner.active=firefox,chrome
 auditrunner.geckodriver =  /opt/geckodriver
 auditrunner.firefox-binary =  /opt/firefox/firefox
