fix use module as maven dependency

--- a/tanaguru-rest/pom.xml
+++ b/tanaguru-rest/pom.xml
@@ -110,6 +110,9 @@
                             <goal>repackage</goal>
                             <goal>build-info</goal>
                         </goals>
+                        <configuration>
+                            <classifier>exec</classifier>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
