add stats refresh every n ms and with config key

--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -43,3 +43,6 @@ crypto.key=change_Me_Please
 # Other
 #Password token validity (second)
 password.tokenValidity=86400
+
+#Refresh data of the statistics page every (ms)
+statistics.fixedDelay.in.milliseconds=1800000
