--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -45,4 +45,4 @@ crypto.key=change_Me_Please
 password.tokenValidity=86400
 
 #Refresh data of the statistics page every (ms)
-statistics.fixedDelay.in.milliseconds=1800000
+statistics.fixedDelay=1800000
