update spring profile and swagger ui

--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -2,6 +2,7 @@ spring.application.name = tanaguru-audit-runner
 spring.banner.location=classpath:/banner/banner.txt
 server.address=localhost
 server.port = 9002
+spring.profiles.active=dev
 
 # DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/tanaguru
