--- a/tanaguru-engine/tanaguru-api/pom.xml
+++ b/tanaguru-engine/tanaguru-api/pom.xml
@@ -161,5 +161,11 @@
 		    <artifactId>json</artifactId>
 		    <version>20180130</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-csv</artifactId>
+		    <version>1.8</version>
+		</dependency>
     </dependencies>
 </project>
