--- a/tanaguru-engine/tanaguru-api/pom.xml
+++ b/tanaguru-engine/tanaguru-api/pom.xml
@@ -7,13 +7,14 @@
         <groupId>com.tanaguru</groupId>
         <version>1.0.6-SNAPSHOT</version>
     </parent>
+    
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>tanaguru-api</artifactId>
 
     <properties>
         <liquibase.version>3.8.5</liquibase.version>
     </properties>
 
-    <artifactId>tanaguru-api</artifactId>
     <build>
         <plugins>
             <plugin>
@@ -28,7 +29,6 @@
         </plugins>
     </build>
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -37,13 +37,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>${springboot-version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-            <version>${springboot-version}</version>
         </dependency>
 
         <dependency>
@@ -64,7 +62,6 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.4.10.Final</version>
         </dependency>
 
         <dependency>
@@ -76,24 +73,22 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.9</version>
         </dependency>
 
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>${liquibase.version}</version>
         </dependency>
+        
         <dependency>
             <groupId>com.tanaguru</groupId>
             <artifactId>tanaguru-helper</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <version>${tanaguru-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.5</version>
         </dependency>
 
         <dependency>
@@ -148,7 +143,6 @@
             <artifactId>powermock-module-junit4</artifactId>
             <scope>test</scope>
         </dependency>
-
 
         <dependency>
             <groupId>org.powermock</groupId>
