--- a/tanaguru-engine/tanaguru-audit-runner/pom.xml
+++ b/tanaguru-engine/tanaguru-audit-runner/pom.xml
@@ -7,9 +7,10 @@
         <groupId>com.tanaguru</groupId>
         <version>1.0.6-SNAPSHOT</version>
     </parent>
+    
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>tanaguru-audit-runner</artifactId>
+    
     <build>
         <plugins>
             <plugin>
@@ -38,7 +39,6 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
-            <version>3.141.59</version>
         </dependency>
 
         <dependency>
@@ -55,13 +55,13 @@
         <dependency>
             <groupId>com.tanaguru</groupId>
             <artifactId>tanaguru-helper</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <version>${tanaguru-version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.tanaguru</groupId>
             <artifactId>tanaguru-api</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <version>${tanaguru-version}</version>
         </dependency>
 
         <dependency>
@@ -92,12 +92,10 @@
             <scope>test</scope>
         </dependency>
 
-
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
