update project_user authorities

--- a/tanaguru-engine/tanaguru-api/pom.xml
+++ b/tanaguru-engine/tanaguru-api/pom.xml
@@ -26,6 +26,15 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+            
+            <plugin>
+		        <groupId>org.liquibase</groupId>
+		        <artifactId>liquibase-maven-plugin</artifactId>
+		        <version>${liquibase.version}</version>
+		        <configuration>
+		            <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+		        </configuration>
+		    </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -78,6 +87,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
         </dependency>
         
         <dependency>
