--- a/tanaguru-resources/src/main/resources/oauth2.properties
+++ b/tanaguru-resources/src/main/resources/oauth2.properties
@@ -1,4 +1,4 @@
-oauth2.auth.enabled=true
+oauth2.auth.enabled=false
 oauth2.userInfoUri=
 oauth2.clientId=
 oauth2.clientSecret=
@@ -6,7 +6,7 @@ oauth2.redirectUri=
 oauth2.tokenUri=
 
 #If oidc is used
-oauth2.oidc.enabled=true
+oauth2.oidc.enabled=false
 oauth2.oidc.jwk=
 oauth2.user.createIfNotFound=false
 # When creating a user creation of an associated contract
