--- a/tanaguru-engine/tanaguru-api/pom.xml
+++ b/tanaguru-engine/tanaguru-api/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>tanaguru-api</artifactId>
 
     <properties>
-        <liquibase.version>3.8.5</liquibase.version>
+        <liquibase-version>3.8.5</liquibase-version>
     </properties>
 
     <build>
@@ -28,14 +28,14 @@
                 </configuration>
             </plugin>
             
-            <plugin>
+            <!-- <plugin>
 		        <groupId>org.liquibase</groupId>
 		        <artifactId>liquibase-maven-plugin</artifactId>
-		        <version>${liquibase.version}</version>
+		        <version>${liquibase-version}</version>
 		        <configuration>
 		            <propertyFile>src/main/resources/liquibase.properties</propertyFile>
 		        </configuration>
-		    </plugin>
+		    </plugin> -->
         </plugins>
     </build>
     <dependencies>
@@ -47,11 +47,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${springboot-version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+            <version>${springboot-version}</version>
         </dependency>
 
         <dependency>
@@ -72,6 +74,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
+            <version>5.4.10.Final</version>
         </dependency>
 
         <dependency>
@@ -83,12 +86,13 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.2.9</version>
         </dependency>
 
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>${liquibase.version}</version>
+            <version>${liquibase-version}</version>
         </dependency>
         
         <dependency>
@@ -100,6 +104,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <version>2.8.5</version>
         </dependency>
 
         <dependency>
