--- a/tanaguru-engine/tanaguru-audit-runner/pom.xml
+++ b/tanaguru-engine/tanaguru-audit-runner/pom.xml
@@ -39,6 +39,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
+            <version>3.141.59</version>
         </dependency>
 
         <dependency>
