--- a/tanaguru-engine/tanaguru-helper/pom.xml
+++ b/tanaguru-engine/tanaguru-helper/pom.xml
@@ -15,6 +15,7 @@
     	<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>${springboot-version}</version>
         </dependency>
         
         <dependency>
