--- a/tanaguru-rest/pom.xml
+++ b/tanaguru-rest/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>${springboot-version}</version>
         </dependency>
         
         <dependency>
@@ -44,6 +45,7 @@
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
+            <version>2.2.4.RELEASE</version>
         </dependency>
 
         <dependency>
