--- a/tanaguru-rest/pom.xml
+++ b/tanaguru-rest/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tanaguru2020</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.6</version>
     </parent>
 
     <packaging>jar</packaging>
