--- a/tanaguru-audit-runner-server/pom.xml
+++ b/tanaguru-audit-runner-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.tanaguru</groupId>
         <artifactId>tanaguru2020</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.7-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
