--- a/tanaguru-engine/pom.xml
+++ b/tanaguru-engine/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tanaguru2020</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>1.0.8-SNAPSHOT</version>
+        <version>1.0.8</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
