--- a/tanaguru-audit-runner-server/pom.xml
+++ b/tanaguru-audit-runner-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.tanaguru</groupId>
         <artifactId>tanaguru2020</artifactId>
-        <version>1.0.8</version>
+        <version>1.0.9-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
