--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -4,6 +4,9 @@ server.address=localhost
 server.port = 9002
 spring.profiles.active=dev
 
+# Default language (en || fr)
+message.lang=en
+
 # DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/tanaguru
 spring.datasource.username=tanaguru
