--- a/tanaguru-engine/tanaguru-audit-runner/pom.xml
+++ b/tanaguru-engine/tanaguru-audit-runner/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tanaguru-engine</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>1.0.9-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
