temporary purge feature

--- a/tanaguru-resources/src/main/resources/rest.properties
+++ b/tanaguru-resources/src/main/resources/rest.properties
@@ -11,3 +11,6 @@ management.endpoint.health.show-details=always
 
 #Allow send an email to admin when user is blocked
 admin.mail.whenblocked = true
+
+purge.status=init
+purge.total=-1
