--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.tanaguru</groupId>
     <artifactId>tanaguru2020</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <properties>
         <springboot-version>2.2.6.RELEASE</springboot-version>
@@ -21,7 +21,7 @@
         <kafka-version>2.4.0</kafka-version>
         <maven-compiler-version>3.8.1</maven-compiler-version>
         <jackson-version>2.10.5</jackson-version>
-        <tanaguru-version>2.0.0</tanaguru-version>
+        <tanaguru-version>2.1.0-SNAPSHOT</tanaguru-version>
     </properties>
 
     <dependencyManagement>
