--- a/tanaguru-cli/pom.xml
+++ b/tanaguru-cli/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tanaguru2020</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.1.0</version>
     </parent>
 
     <packaging>jar</packaging>
