add hikariCP properties

--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -13,6 +13,13 @@ spring.datasource.username=tanaguru
 spring.datasource.password=tanaguru
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# HikariCP settings
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+
 spring.jpa.hibernate.show_sql=false
 spring.jpa.hibernate.types.print.banner=false
 spring.jpa.hibernate.ddl-auto=none
@@ -21,6 +28,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=false
 spring.jpa.properties.hibernate.default_schema=
+spring.jpa.open-in-view=true
 
 spring.liquibase.change-log=classpath:/db/master.xml
 
