update rest properties - thread pools & gzip compression

--- a/tanaguru-resources/src/main/resources/rest.properties
+++ b/tanaguru-resources/src/main/resources/rest.properties
@@ -12,5 +12,10 @@ management.endpoint.health.show-details=always
 #Allow send an email to admin when user is blocked
 admin.mail.whenblocked = true
 
-purge.status=init
-purge.total=-1
+# thread pools
+server.tomcat.threads.max=200
+server.tomcat.threads.min-spare=50
+
+# gzip compression
+server.compression.enabled=true
+server.compression.mime-types=text/html,application/json
