--- a/tanaguru-rest/pom.xml
+++ b/tanaguru-rest/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tanaguru2020</artifactId>
         <groupId>com.tanaguru</groupId>
-        <version>2.2.1</version>
+        <version>2.3.0-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
