--- a/tanaguru-resources/src/main/resources/common.properties
+++ b/tanaguru-resources/src/main/resources/common.properties
@@ -8,7 +8,7 @@ spring.profiles.active=dev
 message.lang=en
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/tanaguru
+spring.datasource.url=jdbc:postgresql://localhost:5433/tanaguru
 spring.datasource.username=tanaguru
 spring.datasource.password=tanaguru
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -33,7 +33,7 @@ spring.jpa.open-in-view=true
 spring.liquibase.change-log=classpath:/db/master.xml
 
 # MAIL
-spring.mail.properties.mail.smtp.from=support@tanaguru.com
+spring.mail.properties.mail.smtp.from=sfoucherferet@tanaguru.com
 
 spring.mail.host=localhost
 spring.mail.port=587
